--- a/public/css/clean-blog.css
+++ b/public/css/clean-blog.css
@@ -407,3 +407,22 @@ footer .copyright {
   font-size: 16px;
   padding: 25px 35px;
 }
+.polaroid {
+  width: 80%;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
