--- a/public/css/clean-blog.css
+++ b/public/css/clean-blog.css
@@ -413,7 +413,9 @@ footer .copyright {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-
+.amy-pic {
+  width: 50px;
+}
 
 
 
